--- a/src/app/components/profile/profile/profile.component.html
+++ b/src/app/components/profile/profile/profile.component.html
@@ -1,1 +1,15 @@
-<p>profile works!</p>
+<div>
+    <div class="panel panel-primary">
+        <div class="panel panel-heading">
+            <h1>{{profile.name}} <small>{{profile.login}}</small></h1>
+
+
+        </div>
+    </div>
+
+    <div class="border border-2 p-5 m-5" *ngFor="let repo of repos">
+
+        <h1>{{repo.name}}</h1>
+        <p>{{repo.description}}</p>
+    </div>
+</div>
