add navigation ber

--- a/src/app/components/profile/profile/profile.component.html
+++ b/src/app/components/profile/profile/profile.component.html
@@ -13,8 +13,11 @@
                     <button class="btn btn-primary ">{{profile.followers}} Followers </button>
                     <button class="btn btn-primary ">{{profile.following}} Following </button>
                     <button class="btn btn-information ">{{profile.following}} Following </button>
-                    <span>{{profile.following}} Following  </span><br>
+                    <span>{{profile.following}} Following  </span>
+                    <br>
                     <a href="{{profile.html_url}} " class="btn btn-primary mt-4 ">  Go to Github</a>
+
+                    <img src="{{profile.avatar_url}}" alt="" class="img-responsive img-centered">
 
                 </div>
 
