--- a/src/app/components/homepage/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage/homepage.component.html
@@ -20,6 +20,19 @@
         </ul>
     </div>
 </nav>
-<div>
 
+<div>
+    <h1>{{profile.login}}</h1>
+
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <img src="" alt="">
+    </div>
+    <div class="col-md-4">
+        <img src="" alt="">
+    </div>
+    <div class="col-md-4">
+        <img src="" alt="">
+    </div>
 </div>
