--- a/src/app/components/profile/profile/profile.component.html
+++ b/src/app/components/profile/profile/profile.component.html
@@ -7,25 +7,37 @@
         <input type="text " [(ngModel)]='username' name='userName' (keyup)='showRepos()' placeholder='Search repos' class="form-control ">
     </form>
     <div class="overlay ">
-        <div class="panel panel-primary ">
-            <div class="panel panel-heading ">
-                <div>
-                    <button class="btn btn-primary ">{{profile.followers}} Followers </button>
-                    <button class="btn btn-primary ">{{profile.following}} Following </button>
-                    <button class="btn btn-information ">{{profile.following}} Following </button>
-                    <span>{{profile.following}} Following  </span>
-                    <br>
-                    <a href="{{profile.html_url}} " class="btn btn-primary mt-4 ">  Go to Github</a>
+        <div class="row">
+            <div class="col-md-4">
 
-                    <img src="{{profile.avatar_url}}" alt="" class="img-responsive img-centered">
+                <img src="{{profile.avatar_url}}" class="img-responsive" alt="">
 
-                </div>
+
+
 
             </div>
+            <div class="col-md-8">
+                <div class="panel panel-primary ">
+                    <div class="panel panel-heading ">
+                        <div>
+                            <button class="btn btn-primary ">{{profile.followers}} Followers </button>
+                            <button class="btn btn-primary ">{{profile.following}} Following </button>
+                            <button class="btn btn-primary">{{profile.following}} Following </button>
+                            <span>{{profile.following}} Following  </span><br>
+                            <span>Bio:{{profile.bio}}</span>
 
+
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
         </div>
         <div class="container ">
-            <h3 text-align="center ">These are my repositories</h3>
+
             <div class="card mt-5 " *ngFor='let repo of repos'>
                 <h5 class="card-header ">{{repo.name}}</h5>
                 <div class="card-body ">
