add github properties

--- a/src/app/components/profile/profile/profile.component.html
+++ b/src/app/components/profile/profile/profile.component.html
@@ -21,11 +21,13 @@
                     <div class="panel panel-heading ">
                         <div>
                             <button class="btn btn-primary ">{{profile.followers}} Followers </button>
-                            <button class="btn btn-primary ">{{profile.following}} Following </button>
-                            <button class="btn btn-primary">{{profile.following}} Following </button>
+                            <button class="btn btn-primary ">{{profile.public_gists}} Gists </button>
+                            <button class="btn btn-primary">{{profile.following}}Following  </button>
                             <span>{{profile.following}} Following  </span><br>
-                            <span>Bio:{{profile.bio}}</span>
-
+                            <span>Blog:{{profile.blog}}</span>
+                            <span>Name:{{profile.name}}</span>
+                            <span>Hirable:{{profile.hireable}}</span>
+                            <span>mailto:{{profile.email}}</span>
 
 
 
