add images in the home page,add background color

--- a/src/app/components/homepage/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage/homepage.component.html
@@ -20,19 +20,24 @@
         </ul>
     </div>
 </nav>
+<div class="body">
 
-<div>
-    <h1>{{profile.login}}</h1>
+    <div>
+        <h1>{{profile.login}}</h1>
 
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <img src="" alt="">
     </div>
-    <div class="col-md-4">
-        <img src="" alt="">
+    <div class="row display">
+        <div class="col-md-4">
+            <img src="../../../../assets/js.png" alt="JavaScript">
+        </div>
+        <div class="col-md-4">
+            <img src="../../../../assets/gng.png" alt="Angular">
+        </div>
+
+        <div class="col-md-4 ">
+            <img src="../../../../assets/py.jpeg " alt="Python ">
+        </div>
     </div>
-    <div class="col-md-4">
-        <img src="" alt="">
-    </div>
+
+
 </div>
