--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!-- <app-homepage>
-</app-homepage> -->
-<app-profile></app-profile>
+<app-homepage>
+</app-homepage>
+<!-- <app-profile></app-profile> -->
