--- a/src/app/components/profile/profile/profile.component.html
+++ b/src/app/components/profile/profile/profile.component.html
@@ -17,25 +17,19 @@
 
             </div>
             <div class="col-md-8">
-                <div class="panel panel-primary ">
-                    <div class="panel panel-heading ">
-                        <div>
-                            <button class="btn btn-primary ">{{profile.followers}} Followers </button>
-                            <button class="btn btn-primary ">{{profile.public_gists}} Gists </button>
-                            <button class="btn btn-primary">{{profile.following}}Following  </button>
-                            <span>{{profile.following}} Following  </span><br>
-                            <span>Blog:{{profile.blog}}</span>
-                            <span>Name:{{profile.name}}</span>
-                            <span>Hirable:{{profile.hireable}}</span>
-                            <span>mailto:{{profile.email}}</span>
+
+                <button class="btn btn-primary ">{{profile.followers}} Followers </button>
+                <button class="btn btn-primary ">{{profile.public_gists}} Gists </button>
+                <button class="btn btn-primary">{{profile.following}}Following  </button>
+                <button class="btn btn-primary">{{profile.following}} Following </button><br>
+                <span>Blog:{{profile.blog}}</span>
+                <br> <span>Name:{{profile.name}}</span><br>
+                <span>Hirable:{{profile.hireable}}</span><br>
+                <span>mailto:{{profile.email}}</span>
 
 
 
-                        </div>
 
-                    </div>
-
-                </div>
             </div>
         </div>
         <div class="container ">
