--- a/src/app/components/homepage/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage/homepage.component.html
@@ -1,25 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand" href="#">
-
-        <img src="../../../../assets/git2.png" alt="" width="30" height="30" class="d-inline-block align-top"> GithubSearch
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLinkActive="/profile">Repositories</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLinkActive="Active">About</a>
-            </li>
-        </ul>
-    </div>
-</nav>
 <div class="body">
 
     <div>
@@ -39,5 +17,5 @@
         </div>
     </div>
 
-
+    <a href="{{profile.html_url}}" class="btn btn-primary mt-4">  Go to Github</a>
 </div>
