--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -12,10 +12,10 @@
                 <a class="nav-link" routerLink="/home" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/Profile">Repositories</a>
+                <a class="nav-link" routerLink="/Profile" routerLinkActive="active">Repositories</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/about">About</a>
+                <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
             </li>
         </ul>
     </div>
