--- a/src/app/components/profile/profile/profile.component.html
+++ b/src/app/components/profile/profile/profile.component.html
@@ -25,7 +25,11 @@
                 <span>Blog:{{profile.blog}}</span>
                 <br> <span>Name:{{profile.name}}</span><br>
                 <span>Hirable:{{profile.hireable}}</span><br>
-                <span>mailto:{{profile.email}}</span>
+                <span>Location:{{profile.location}}</span><br>
+                <!-- <span>mailto:{{profile.email}}</span> -->
+
+                <a href="mailto">Email:{{profile.email}}</a>
+
 
 
 
