--- a/src/app/components/profile/profile/profile.component.html
+++ b/src/app/components/profile/profile/profile.component.html
@@ -52,6 +52,9 @@
                     <span class="label label-info">{{profile.public_gists}} Gists</span>
 
                 </p>
+                <p>
+                    <a href="{{profile.html_url}}" class="btn btn-success"> Visit Github</a>
+                </p>
                 <!-- <button class="btn btn-primary ">{{profile.followers}} Followers </button>
                 <button class="btn btn-primary ">{{profile.public_gists}} Gists </button>
                 <button class="btn btn-primary">{{profile.following}}Following  </button>
