--- a/src/app/components/homepage/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage/homepage.component.html
@@ -6,14 +6,14 @@
     </div>
     <div class="row display">
         <div class="col-md-4">
-            <img src="./../../../assets/js.png" alt="JavaScript">
+            <img src="../../../../assets/js.png" alt="JavaScript">
         </div>
         <div class="col-md-4">
-            <img src="./../../../assets/gng.png" alt="Angular">
+            <img src="../../../../assets/gng.png" alt="Angular">
         </div>
 
         <div class="col-md-4 ">
-            <img src="./../../../assets/py.jpeg " alt="Python ">
+            <img src="../../../../assets/py.jpeg" alt="Python ">
         </div>
     </div>
 
