add image link address

--- a/src/app/components/homepage/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage/homepage.component.html
@@ -6,16 +6,16 @@
     </div>
     <div class="row display">
         <div class="col-md-4">
-            <img src="../../../../assets/js.png" alt="JavaScript">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/2048px-Unofficial_JavaScript_logo_2.svg.png" height="200px" alt=" JavaScript ">
         </div>
-        <div class="col-md-4">
-            <img src="../../../../assets/gng.png" alt="Angular">
+        <div class="col-md-4 ">
+            <img src="https://javadesde0.com/wp-content/uploads/87018c00-694b-11e9-8b5f-c34826306d36.png " height="200px " width="220px " alt="Angular ">
         </div>
 
         <div class="col-md-4 ">
-            <img src="../../../../assets/py.jpeg" alt="Python ">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png " alt="Python " height="250px ">
         </div>
     </div>
 
-    <a href="{{profile.html_url}}" class="btn btn-primary mt-4">  Go to Github</a>
+    <a href="{{profile.html_url}} " class="btn btn-primary mt-4 ">  Go to Github</a>
 </div>
