--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <a class="navbar-brand" href="#">
 
-        <img src="../../../../assets/git2.png" alt="" width="30" height="30" class="d-inline-block align-top"> GithubSearch
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="" width="30" height="30" class="d-inline-block align-top"> GithubSearch
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
